<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="buu.informatics.s59161125.myprojectterminewsinvest.Loginmain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/InewsInvest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/InewsInvest"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/cryptocurrency"
            app:layout_constraintBottom_toTopOf="@+id/btn3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InewsInvest" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/Stock"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/exchage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>