<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Exchange">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/Headexchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/exchange"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:text="@string/cal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/Listcurrencyone"
            android:layout_width="161dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="75dp"
            app:layout_constraintEnd_toStartOf="@+id/currencyone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Headexchange" />

        <Spinner
            android:id="@+id/Listcurencytwo"
            android:layout_width="161dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toStartOf="@+id/currencytwo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Listcurrencyone" />

        <EditText
            android:id="@+id/currencyone"
            android:layout_width="173dp"
            android:layout_height="41dp"
            android:layout_marginTop="61dp"
            android:ems="10"
            android:fontFamily="@font/prompt_medium"
            android:inputType="textPersonName"
            android:text="@string/currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Listcurrencyone"
            app:layout_constraintTop_toBottomOf="@+id/Headexchange" />

        <EditText
            android:id="@+id/currencytwo"
            android:layout_width="173dp"
            android:layout_height="41dp"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:fontFamily="@font/prompt_medium"
            android:inputType="textPersonName"
            android:text="@string/currency"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Listcurencytwo"
            app:layout_constraintTop_toBottomOf="@+id/currencyone" />

        <EditText
            android:id="@+id/result"
            android:layout_width="173dp"
            android:layout_height="41dp"
            android:layout_marginBottom="104dp"
            android:ems="10"
            android:fontFamily="@font/prompt_medium"
            android:inputType="textPersonName"
            android:text="@string/result"
            app:layout_constraintBottom_toTopOf="@+id/calbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

